--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -1,4 +1,28 @@
+.el-main {
+  max-width: 800px;
+  margin: 0 auto;
+}
 .contentWrap {
   max-width: 750px;
   margin: 0 auto;
+}
+
+.codeWrap {
+  margin-top: 10px;
+  background: #a7a7a7;
+  border-radius: 6px;
+  position: relative;
+  padding: 10px;
+}
+.mdWrap {
+  font-size: 13px;
+  line-height: 20px;
+  p, li, ol {
+    text-indent: 2em;
+    margin-top: 10px;
+  }
+  li, ol {
+    list-style: none;
+    font-size: 14px;
+  }
 }
