--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -13,6 +13,8 @@
   border-radius: 6px;
   position: relative;
   padding: 10px;
+  padding-left: calc(3em + 10px);
+  overflow-x: auto;
 }
 .mdWrap {
   font-size: 13px;
@@ -29,10 +31,12 @@
 .codeRow {
   position: absolute;
   pointer-events: none;
-  top: 0;
+  top: 10px;
+  bottom: 10px;
+  overflow: hidden;
   font-size: 100%;
-  left: -3.8em;
-  width: 3.8em;
+  left: 0;
+  width: 3em;
   letter-spacing: -1px;
   border-right: 1px solid #999;
   user-select: none;
@@ -43,7 +47,7 @@
     counter-increment: linenumber;
     &::before {
       content: counter(linenumber);
-      color: #999;
+      color: rgb(27, 26, 26);
       display: block;
       padding-right: 0.8em;
       text-align: right;
